apps/ntfy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    goldilocks.fairwinds.com/enabled: "true"
